# Mastering-New-Python-Libraries

./: .gitignore  COMMIT_CONVENTION.md  Makefile  Mastering-New-Python-Libraries.ipynb  README.ipynb  README.md  TESTING.md  convert_to_notebook.py  pyproject.toml  test-notebook.ipynb  test.ipynb  test_edge_cases.md  test_problematic.md  test_severe_issue.md
.github/workflows/: build-notebook.yml  build-pdf.yml  test-code.yml
src/library_exploration/: __init__.py  convert_to_notebook.py  debug_blocks.py  test_code_blocks.py  test_conversion.py  validate_notebook.py
