[project]
name = "library-exploration"
version = "0.1.0"
description = "Playing with Python library exploration examples"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.0.3",
    "requests>=2.32.4",
    "google-adk>=0.0.1",
    "numpy>=2.3.0",
    "ipykernel>=6.29.5",
    "nbformat>=5.10.4",
    "nbconvert>=7.16.6",
]

[project.optional-dependencies]
test = [
    "nbformat>=5.0.0",
    "nbconvert>=7.0.0",
    "jupyter>=1.0.0",
    "ipython>=8.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]
